# personal-finance

./: .dockerignore  .env  .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  start-all.ps1
services/ai-service/: .env.example  README.md  conftest.py  pyproject.toml
services/ai-service/ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ai-service/app/: config.py  main.py  models.py  observability.py
services/ai-service/app/prompts/: journey_advisor_v1.py  superbank_v1.py
services/ai-service/app/providers/: anthropic.py  base.py  embedding_base.py  embedding_factory.py  factory.py  gemini.py  gemini_embedding.py  openai_embedding.py
services/ai-service/app/services/: answerer.py  categorizer.py  (+9 more)
services/ai-service/docs/: LLM-endpoint-test.md  langfuse-integration.md  provider-parser-class-diagram.md  rag-embeddings-howto.md
services/ai-service/evals/: README.md  ask_questions.json  eval_extraction.py  eval_faithfulness.py  eval_retrieval.py  scoring.py  search_queries.json
services/ai-service/scripts/: backfill_embeddings.py  hello_llm.py
services/ai-service/tests/: test_answerer.py  test_categorize.py  test_chunker.py  test_embedder.py  test_embedding_providers.py  test_eval_scoring.py  test_health.py  test_journey_advisor.py  test_merchant_suggester.py  test_parse.py  test_parse_pdf.py  test_pdf_extractor.py  test_portfolio_reviewer.py  test_reranker.py  test_retriever.py  test_superbank_extractor.py
(+877 files in other folders)
